@@ -45,7 +45,7 @@
 #define STATUS_STRING_COUNT       6
 #define FLAGSHIP_STRING_COUNT    13
 #define ORBITSCAN_STRING_COUNT   19
-#define MAINMENU_STRING_COUNT    56
+#define MAINMENU_STRING_COUNT    57
 #define NETMELEE_STRING_COUNT    18
 
 enum {
